# kanban

./: .gitignore  LICENSE  README.md  app.js  package-lock.json  package.json
public/: index.html
public/components/css/: datetimepicker.css  style.css  style_login.css
public/components/js/: login.js  login_status.js
public/login/: index.html
server/: Cargo.toml
server/src/: main.rs
utils/: index.js  utils.js
